Additional docker files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,6 +17,7 @@ RUN apt-get update && apt-get install -y \
     libavformat58 \
     libswscale5 \
     ffmpeg \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
@@ -29,15 +30,23 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Create necessary directories
-RUN mkdir -p models uploads output _samples
+RUN mkdir -p models uploads output recordings reports
+
+# Download YOLO model
+RUN python3 -c "from ultralytics import YOLO; YOLO('yolov8n.pt').save('./models/yolov8n.pt')"
 
 # Set environment variables
 ENV PYTHONPATH=/app
 ENV FLASK_ENV=production
 ENV FLASK_DEBUG=False
+ENV YOLO_MODEL_PATH=./models/yolov8n.pt
 
 # Expose port
 EXPOSE 8000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/api/health || exit 1
 
 # Run the application
 CMD ["python3", "app.py"]
