--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,10 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./backend/models:/app/models
       - ./backend/uploads:/app/uploads
       - ./backend/output:/app/output
+      - ./backend/recordings:/app/recordings
+      - ./backend/reports:/app/reports
     environment:
       - YOLO_MODEL_PATH=./models/yolov8n.pt
       - CONF_THRESHOLD=0.4
@@ -27,17 +28,19 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 40s
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "5173:5173"
+      - "80:80"
     environment:
       - VITE_API_URL=http://localhost:8000
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     restart: unless-stopped
 
 networks:
