--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm ci --only=production
 
 # Copy source code
 COPY . .
@@ -16,19 +16,17 @@ COPY . .
 RUN npm run build
 
 # Production stage
-FROM node:20-alpine
-
-WORKDIR /app
-
-# Install serve to serve the built app
-RUN npm install -g serve
+FROM nginx:alpine
 
 # Copy built application from build stage
-COPY --from=build /app/dist ./dist
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port
-EXPOSE 5173
+EXPOSE 80
 
-# Start the application
-CMD ["serve", "-s", "dist", "-l", "5173"]
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"]
 
